--- a/sample-site/index.html
+++ b/sample-site/index.html
@@ -42,6 +42,7 @@
         <input type="number" value="0">
         <input type="number" value="0">
         <input type="number" value="0">
+        <input class="dummy" type="number">
       </span>
       <div class="header"><input class="header" type="number" disabled></div>
     </div>
