--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="styles/style.css">
   <script src="scripts/main.js" defer></script>
+  <meta name="google-site-verification" content="WmI9s2dwqQ49XhBmo1VJN9X0P1iFRxWD0f72s7Y4QLQ">
 </head>
 
 <body>
