--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles/style.css">
   <script src="scripts/main.js" defer></script>
   <meta name="google-site-verification" content="WmI9s2dwqQ49XhBmo1VJN9X0P1iFRxWD0f72s7Y4QLQ">
+  <mata name="robots" content="none">
 </head>
 
 <body>
